SERVER-22191 Don't register CurOp on Client until done with construction